change the library for handle a gridview calendar

--- a/sample/src/main/res/drawable/bg_circle_today.xml
+++ b/sample/src/main/res/drawable/bg_circle_today.xml
@@ -3,12 +3,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@color/custom_background"/>
+            <solid android:color="#FFFFFF"/>
         </shape>
     </item>
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/custom_background_today"/>
+            <solid android:color="@color/red"/>
             <stroke
                     android:width="@dimen/dimen_margin_circle"
                     android:color="@color/transparent"/>
