--- a/sample/src/main/res/color/custom_calendar_text_selector.xml
+++ b/sample/src/main/res/color/custom_calendar_text_selector.xml
@@ -3,10 +3,11 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:state_selected="true" android:color="@color/custom_text_selected"/>
-    <item android:state_pressed="true" android:color="@color/custom_text_selected"/>
-    <item app:tsquare_state_current_month="false" android:color="@color/custom_text_inactive"/>
-    <item app:tsquare_state_today="true" android:color="@color/custom_text_selected"/>
-    <item app:tsquare_state_selectable="false" android:color="@color/custom_text_inactive" />
-    <item android:color="@color/custom_background_today"/>
+    <item android:state_selected="true" android:color="@color/white"/>
+    <item android:state_pressed="true" android:color="@color/white"/>
+       <item android:color="@color/calendar_text_active" />
+   <!--     <item app:tsquare_state_current_month="false" android:color="@color/custom_text_inactive"/>
+       <item app:tsquare_state_today="true" android:color="@color/custom_text_selected"/>
+       <item app:tsquare_state_selectable="false" android:color="@color/custom_text_inactive" />
+       <item android:color="@color/custom_background_today"/>-->
 </selector>
